--- a/manifest.json
+++ b/manifest.json
@@ -2,10 +2,11 @@
   "manifest_version": 3,
   "name": "CRXJS React Vite Example",
   "version": "1.0.0",
+  "permissions": ["storage"],
   "action": { "default_popup": "index.html" },
    "content_scripts": [
     {
-      "js": ["src/content.jsx"],
+      "js": ["src/content.tsx"],
       "matches": ["https://www.irctc.co.in/nget/*"]
     }
   ]
